syntax = "proto3";

option csharp_namespace = "Verdure.ElectronBot.GrpcService";

package electronbotactiongrpc;

// The electronbotaction service definition.
service ElectronBotActionGrpc {
  // Sends a greeting
  rpc PlayEmotionAction (EmotionActionFrameRequest) returns (EbHelloReply);

  rpc PlayEmoitonActions (EmotionActionFramesRequest) returns (EbHelloReply);

  rpc SendMotorControl (MotorControlRequest) returns (EbHelloReply);

}

// The request message containing the user's name.
message EmotionActionFrameRequest {
 float J1 = 1;
 float J2 = 2;
 float J3 = 3;
 float J4 = 4;
 float J5 = 5;
 float J6 = 6;
 bool Enable = 7;
 bytes FrameBuffer = 8;
}

// The response message containing the greetings.
message EbHelloReply {
  string message = 1;
}


// The request message containing the user's name.
message MotorControlRequest {
 int32 Init1 = 1;
 int32 Init2 = 2;
 int32 Init3 = 3;
 int32 Init4 = 4;
 int32 EnableA = 5;
 int32 EnableB = 6;
}


message EmotionActionFramesRequest {
	repeated EmotionActionFrameRequest ActionsRequest = 1;
}